Separo el Css en un archivo aparte

--- a/index.html
+++ b/index.html
@@ -8,57 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <style>
-        body{
-            margin-left: 25%;
-            margin-top: 5%;
-            background-color: rgb(30, 32, 32);
-            color: white; 
-        }
-
-        .myInput{
-            margin-top: 1em;
-            width: 25%;
-            margin-left: 20%;
-        }
-
-        .word{
-            margin-left: 25%;
-        }
-
-        .myButtons{
-            width: 10em;
-            margin-left: 2em;
-        }
-
-        .divButtons{
-            margin-left: 2em;
-            width: 60%;
-
-        }
-
-        .myBtn{
-            width: 5em;
-        }
-
-        .compareButton{
-            display: flex;
-            justify-content: center;
-        }
-
-        .correct{
-            background-color: rgb(47, 197, 79);
-        }
-
-        .incorrect{
-            background-color: rgb(226, 39, 39) ;
-            /*background-color: rgb(255, 255, 255);*/ 
-        }
-
-        #saveWordButton{
-            margin-left: 2em;
-        }
-    </style>
+    <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
     <div id="app">
